2010-02-15 Weston Schmidt <weston_schmidt@alumni.purdue.edu>
	* src/arguments.c, src/arguments.h, dfu-programmer.1,
	  AUTHORS: Added the patch Dave Fletcher sent to
	  enable atmega32u2 support.

2009-09-09 Weston Schmidt <weston_schmidt@alumni.purdue.edu>
	* src/commands.c: Fix a bug due to the order of the
	  bootloader suppression and the lower boundary
	  verification.  Additionally, fixed an off by 1 error
	  in the flash address verification.

2009-08-22 Weston Schmidt <weston_schmidt@alumni.purdue.edu>
	* fedora/dfu-programmer.spec.in, configure.ac, NEWS:
	  Updated to the new 0.5.2 release.

2009-08-13 Weston Schmidt <weston_schmidt@alumni.purdue.edu>
	* src/arguments.c, src/arguments.h, src/atmel.c,
	  src/commands.c: Fixed the broken state that the AVR
	  devices were in due to not selecting the correct memory
	  page prior to flashing.  Broke apart the
	  eeprom/flash/user page flashing/dumping into separate
	  functions so the maintenance will be easier.  Cleaned
	  up the address ranges so they are consistent across
	  memory types.  Fixed some debug statements that should
	  have been going to stderr instead of stdout that made
	  the output of a dump garbled.  Cleaned up some more
	  off by 1 errors that were in the dump functionality.
	  Verified my changes on my AVR32 and AVR boards.

2009-05-31 Weston Schmidt <weston_schmidt@alumni.purdue.edu>
	* src/atmel.c: Fix a memory address identification bug
	  that would cause the value 0xff to not be recognized.
	* src/commands.c, AUTHORS: Applied the patch that Xavier
	  Leprevost created to allow dumping avr32 user flash
	  properly.

2009-05-23 Weston Schmidt <weston_schmidt@alumni.purdue.edu>
	* src/atmel.c: Fix a buffer overrun error that would
	  cause a core dump sometimes.

2009-04-30 Weston Schmidt <weston_schmidt@alumni.purdue.edu>
	* src/arguments.c, src/arguments.h, src/atmel.c,
	  src/atmel.h, src/commands.c, AUTHORS: Applied the
	  patch from Zachary Clifford to enable all the AVR32